added necessary dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ dependencies = [
    "fastapi>=0.115.12",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
+    "pdfplumber>=0.10.2",
+    "pypdf>=3.17.0",
+    "pytesseract>=0.3.10",
+    "Pillow>=10.0.1",
 ]
 
 [dependency-groups]
